클라우드타입 설정 프로파일 수정

--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -3,7 +3,11 @@ spring:
     ansi:
       enabled: always
 
-# JPA 설정
+  config:
+    activate:
+      on-profile: cloud
+
+  # JPA 설정
   jpa:
     hibernate:
       ddl-auto: none
